--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 /* Reset and Base */
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -17,6 +18,8 @@ header {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
 header h1 {
+  font-family: 'Great Vibes', cursive;
+
   padding: 1rem 0;
   font-size: 2rem;
 }
